objects/DMAPP__Dealmaker_Powerpoint__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Use this custom setting to specify what information is included in PowerPoint files generated by Dealmaker.</description>
    <fields>
        <fullName>DMAPP__AM_Add_Objectives__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, objectives data can be included in account plan Powerpoint exports, except when the Objectives tab is disabled in the relevant Plan Type.</description>
        <inlineHelpText>Check this box to include objectives data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Objectives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Opportunities__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this setting is enabled, opportunity data can be included in account plan Powerpoint exports.</description>
        <inlineHelpText>Check this box to include opportunities data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Opportunities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Opportunity_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, opportunity map data can be included in account plan Powerpoint exports.</description>
        <inlineHelpText>Check this box to include opportunity map data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Opportunity Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Org_Chart__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, political map data can be included in account plan Powerpoint exports.</description>
        <inlineHelpText>Check this box to include org chart data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Org Chart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Overview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include overview data from Smart Account Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include overview data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Plan_Details__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, plan details data can be included in account plan Powerpoint exports, except when the Plan Details tab is disabled in the relevant Plan Type.</description>
        <inlineHelpText>Check this box to include plan details data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Plan Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Strategy_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When this setting is enabled, insight map data can be included in account plan Powerpoint exports.</description>
        <inlineHelpText>Check this box to include strategy data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Strategy Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__AM_Add_Value_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include value map data from Smart Account Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include value map data from Smart Account Manager in the PowerPoint file.</inlineHelpText>
        <label>AM Add Value Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Custom_Skin__c</fullName>
        <label>Custom Skin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Future_Generation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Generation of the Powerpoint is done asynchronous or synchronous process.  If selected then the asynchronous method is used and the Powerpoint file is stored in the Personal Folder of the user</description>
        <label>Future Generation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Link_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Use this field to show or hide the export to PowerPoint link in a layout.</description>
        <inlineHelpText>Use this field to show or hide the export to PowerPoint link in a layout.</inlineHelpText>
        <label>Link Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Assessment_Notes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include assessment notes from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include assessment notes from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Assessment Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to include assessment data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include assessment data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Competitive_Strategy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include competitive strategy data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include competitive strategy data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Competitive Strategy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Competitors__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include competitor data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include competitor data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Competitors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Decision_Criteria__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include decision criteria from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include decision criteria from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Decision Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Insight_Maps__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include insight data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Insight Maps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Overview__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include overview data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include overview data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Overview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Playbook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to include playbook data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include playbook data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Playbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Political_Map_Detail__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include Political Map detail data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include Political Map detail data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Political Map Detail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Political_Map__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include political map data from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include political map data from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Political Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__OM_Add_Prime_Actions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Check this box to include Prime actions from Smart Opportunity Manager in the PowerPoint file.</description>
        <inlineHelpText>Check this box to include Prime actions from Smart Opportunity Manager in the PowerPoint file.</inlineHelpText>
        <label>OM Add Prime Actions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Remove_Logo__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to remove logo from slides</inlineHelpText>
        <label>Remove Logo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Background_Color__c</fullName>
        <inlineHelpText>Background color of PPT slides in hexadecimal</inlineHelpText>
        <label>Slide Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Body_Font_Color__c</fullName>
        <inlineHelpText>Font color of slides body text in hexadecimal</inlineHelpText>
        <label>Slide Body Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Bullet_Color__c</fullName>
        <description>Color of bullet points in slides in hexadecimal</description>
        <label>Slide Bullet Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Header_Font_Color__c</fullName>
        <inlineHelpText>Font color of slide headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Header Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Subtitle_Font_Color__c</fullName>
        <inlineHelpText>Font color of cover slide subtitle in hexadecimal</inlineHelpText>
        <label>Slide Subtitle Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Border_Color__c</fullName>
        <inlineHelpText>Border color of tables in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Border Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Even_Row_Background_Color__c</fullName>
        <inlineHelpText>Background color of even table rows in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Even Row Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Header_Background_Color__c</fullName>
        <inlineHelpText>Background color of table headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Header Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Header_Font_Color__c</fullName>
        <inlineHelpText>Font color of table headers in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Header Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Odd_Row_Background_Color__c</fullName>
        <description>Background color of odd table rows in slides in hexadecimal</description>
        <label>Slide Table Odd Row Background Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Table_Row_Font_Color__c</fullName>
        <inlineHelpText>Font color of table rows in slides in hexadecimal</inlineHelpText>
        <label>Slide Table Row Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Slide_Title_Font_Color__c</fullName>
        <inlineHelpText>Font color of cover slide title in hexadecimal</inlineHelpText>
        <label>Slide Title Font Color</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Use_New_Mechanism__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use New Mechanism</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Widescreen_Format__c</fullName>
        <inlineHelpText>Set this value to 0 to use 4:3 format in PPT slides. Set this value to 1 use widescreen format in PPT slides</inlineHelpText>
        <label>Widescreen Format</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Dealmaker Powerpoint</label>
</CustomObject>